# sci_ux

./: README.md  build.py  multi_page_example.py
output/: about.html  index.html
output/py_dom/: __init__.py  events.py
output/py_html/: MANIFEST.in  __init__.py  environment.py  pyproject.toml  setup.py
output/py_html/macros/: __init__.py  components.py  custom_forms.py  examples.py  layouts.py  ui.py
output/py_html/styles/: framework.py
output/pyodide/: download_ipywidgets.py  package.json
output/scripts/: about.py  include.py  main.py
py_html/: README.md  css.py  elements.py  environment.py
py_html/macros/: custom_examples.py  custom_layouts.py  custom_ui.py  forms.py
py_html/styles/: __init__.py
scripts/: file_explorer_demo.py  home.py  main.py  sci_ux_components.py  text_editor_demo.py
scripts/ui/: __init__.py  modal.py
scripts/ui/applets/: __init__.py  file_explorer.py  text_editor.py
